# solana-token-transfer-hook

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  package.json
anchor/programs/token-transfer-hook/: Cargo.toml
anchor/programs/token-transfer-hook/src/: errors.rs  lib.rs
anchor/programs/token-transfer-hook/src/instructions/: initialize_extra_account_meta_list.rs  mod.rs  transfer_hook.rs
anchor/programs/token-transfer-hook/src/state/: config.rs
anchor/src/: index.ts  token-transfer-hook-exports.ts
anchor/tests/: token-transfer-hook.spec.ts
web/src/app/: app-routes.tsx
web/src/app/token-transfer-hook/: token-transfer-hook-data-access.tsx  token-transfer-hook-feature.tsx  token-transfer-hook-ui.tsx
